fixed small layout bug in generic file view

--- a/app/assets/stylesheets/generic_files.css.scss
+++ b/app/assets/stylesheets/generic_files.css.scss
@@ -2,31 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.auditinfo {
-  table {
+#gf-sidebar {
+    padding-left: 0px;
+    padding-bottom: 20px;
     width: 100%;
-  }
-
-  table, th, td {
-    border: 1px solid #eee;
-  }
-
-  th, td {
-    padding: 0.5em;
-  }
-
-  th {
-    text-align:center
-  }
-
-  .time, .type {
-    text-align:center
-  }
-
-  .outcome {
-    column-width: 700px;
-    -moz-column-width:700px; /* Firefox */
-    -webkit-column-width:700px; /* Safari and Chrome */
-    word-wrap: break-word;
-  }
 }
